# Lab04Tump

./: CMakeLists.txt  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/include/: formatter_ex.hpp
formatter_ex_lib/src/: formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/include/: formatter.hpp
formatter_lib/src/: formatter.cpp
hello_world/: CMakeLists.txt
hello_world/src/: hello_world.cpp
solver/: CMakeLists.txt
solver/src/: equation.cpp
solver_lib/: CMakeLists.txt
solver_lib/include/: solver.hpp
solver_lib/src/: solver.cpp
tests/formatter_ex_test/: CMakeLists.txt  test_formatter_ex.cpp
tests/formatter_test/: CMakeLists.txt  test_formatter.cpp
tests/solver_test/: CMakeLists.txt  test_solver.cpp
